--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "eslint-plugin-standard": "3.0.1",
     "istanbul": "0.4.5",
     "mocha": "4.0.1"
+  },
+  "dependencies": {
+    "iso-7064": "1.0.0"
   }
 }
