--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,31 +1,15 @@
 {
   "env": {
     "browser": true,
-    "es6": true,
-    "mocha": true,
+    "es2021": true,
+    "jest": true,
     "node": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
+    "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "rules": {
-    "no-console": "off",
-    "indent": [
-      "error",
-      4
-    ],
-    "linebreak-style": [
-      "error",
-      "windows"
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ]
   }
 }
