--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "fast-iban",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "IBAN/BBAN validation and conversion following ISO 13616",
   "main": "./src/iban.js",
   "types": "./src/iban.d.ts",
   "scripts": {
-    "lint": "node_modules/.bin/eslint .",
-    "test": "node_modules/.bin/mocha --recursive test",
-    "test-coverage": "node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha test"
+    "coverage": "jest --coverage",
+    "lint": "eslint . --ext .js",
+    "lint-fix": "eslint --fix . --ext .js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -30,18 +31,15 @@
     "url": "https://github.com/EDumdum/iban-js/issues"
   },
   "homepage": "https://github.com/EDumdum/iban-js#readme",
-  "devDependencies": {
-    "chai": "4.1.2",
-    "eslint": "4.18.2",
-    "eslint-config-standard": "10.2.1",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-node": "5.2.0",
-    "eslint-plugin-promise": "3.6.0",
-    "eslint-plugin-standard": "3.0.1",
-    "istanbul": "0.4.5",
-    "mocha": "6.2.2"
-  },
   "dependencies": {
-    "iso-7064": "1.0.1"
+    "iso-7064": "1.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.17.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^28.1.0"
   }
 }
